objects/AHJ_Name__c.object
<CustomObject>
    <fields>
        <fullName>AC_Disconnect_LOS_Of_Inverter__c</fullName>
        <label>AC Disconnect LOS Of Inverter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AC_Disconnect_LOS_Of_MSP__c</fullName>
        <label>AC Disconnect LOS Of MSP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AHJName_ID__c</fullName>
        <label>AHJName ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AHJ_Specific_Design_Form_Needed__c</fullName>
        <label>AHJ Specific Design Form Needed</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AHJ_Type__c</fullName>
        <label>AHJ Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>City</fullName>
                </value>
                <value>
                    <fullName>County</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Access_Permit_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Access Permit Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_CERT_Needed__c</fullName>
        <label>Additional CERT Needed</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_GC_Required_Roof__c</fullName>
        <label>Additional GC Required Roof</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Adopted_AHJ_Codes__c</fullName>
        <label>Adopted AHJ Codes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Appointment_Needed__c</fullName>
        <label>Appointment Needed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Array_GC_From_JB_to_POI__c</fullName>
        <label>Array GC From JB to POI</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Array_GC_Size__c</fullName>
        <label>Array GC Size</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Array_Ground_ROD_Term_Point__c</fullName>
        <label>Array Ground ROD Term Point</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Array_Grounding_Notes__c</fullName>
        <label>Array Grounding Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Associated_AHJ_ID__c</fullName>
        <label>Associated AHJ ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Blocking_Required_For_Smart_Mount__c</fullName>
        <label>Blocking Required For Smart Mount</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Building_Permit_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Building Permit Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cal_Fire_Guidelines_Strictly_Enforced__c</fullName>
        <label>Cal Fire Guidelines Strictly Enforced</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cal_Fire_Notes__c</fullName>
        <label>Cal Fire Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Carbon_Monoxide_Smoke_Detector__c</fullName>
        <label>Carbon Monoxide Smoke Detector</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Center_FED120_Rule__c</fullName>
        <label>Center FED120 Rule</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chief_Inspector_Contact_Info__c</fullName>
        <label>Chief Inspector Contact Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Chief_Inspector_Notes__c</fullName>
        <label>Chief Inspector Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Conduit_Type_Multi_Family_EMT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conduit Type Multi Family EMT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conduit_Type_Multi_Family_FMC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conduit Type Multi Family FMC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conduit_Type_Multi_Family_RGS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conduit Type Multi Family RGS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conduit_Type_Multi_Family_ROMEX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conduit Type Multi Family ROMEX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Info__c</fullName>
        <label>Contact Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contractor_Stamp_Required_NH__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contractor Stamp Required NH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contractor_Stamp_Required_SPD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contractor Stamp Required SPD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DC_Contactor__c</fullName>
        <label>DC Contactor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DC_Disconnect_Notes__c</fullName>
        <label>DC Disconnect Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DC_Gec_For_UnGrounded_Systems__c</fullName>
        <label>DC Gec For UnGrounded Systems</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DC_disconnect_outside__c</fullName>
        <label>DC disconnect outside</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Design_Guideline_URL__c</fullName>
        <label>Design Guideline URL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Design_Wind_Speed_ASCE710__c</fullName>
        <label>Design Wind Speed ASCE710</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Electrical_Permit_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Electrical Permit Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Electrical_Stamp_Required_NH__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Electrical Stamp Required NH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Electrical_Stamp_Required_SPD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Electrical Stamp Required SPD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Electronic_Submittal__c</fullName>
        <label>Electronic Submittal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Elevation_View_Required__c</fullName>
        <label>Elevation View Required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Yes - No Module</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exact_Measurements_for_Property_Line__c</fullName>
        <label>Exact Measurements for Property Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exposure_Category__c</fullName>
        <label>Exposure Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Conduit_Type__c</fullName>
        <label>External Conduit Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>EMT</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>RGS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Extra_Ground_ROD__c</fullName>
        <label>Extra Ground ROD</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FAA_Permit_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FAA Permit Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fire_Permit_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fire Permit Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Handled_AC_Disconnect__c</fullName>
        <label>Handled AC Disconnect</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>History_Notes__c</fullName>
        <label>History Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Include_Builder_SE_Letter__c</fullName>
        <label>Include Builder SE Letter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Include_Builder_Site_Plan_In_PPNH__c</fullName>
        <label>Include Builder Site Plan In PPNH</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Internal_Conduit_Type__c</fullName>
        <label>Internal Conduit Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>EMT</fullName>
                </value>
                <value>
                    <fullName>FMC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Line_Side_TAP_Notes__c</fullName>
        <label>Line Side TAP Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Line_Side_TAP__c</fullName>
        <label>Line Side TAP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Load_Side_Interconnection_Notes__c</fullName>
        <label>Load Side Interconnection Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Load_Side_Tap__c</fullName>
        <label>Load Side Tap</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Master_Permit_REQ_Format__c</fullName>
        <label>Master Permit REQ Format</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>No_Stamp_Required_NH__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Stamp Required NH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Stamp_Required_SPD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Stamp Required SPD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Non_RACK_Based_Mounting_Systems__c</fullName>
        <label>Non RACK Based Mounting Systems</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_Of_Copies__c</fullName>
        <label>Number Of Copies</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Over_the_Counter_Permit__c</fullName>
        <label>Over the Counter Permit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Paint_Exterior_Conduit__c</fullName>
        <label>Paint Exterior Conduit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Paper_Size8_And_a_Half_X11__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Paper Size8 And a Half X11</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Paper_Size_11X17__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Paper Size 11X17</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Paper_Size_24X36__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Paper Size 24X36</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Paper_Size__c</fullName>
        <label>Paper Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permit_Cost__c</fullName>
        <label>Permit Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Permit_Jurisdiction_REF__c</fullName>
        <label>Permit Jurisdiction REF</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permit_Status_Online__c</fullName>
        <label>Permit Status Online</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Permitting_Notes__c</fullName>
        <label>Permitting Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pre_Inspection_Prior_To_Panels__c</fullName>
        <label>Pre Inspection Prior To Panels</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resubmittal_Cost__c</fullName>
        <label>Resubmittal Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Review_3P_Contact__c</fullName>
        <label>Review 3P Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Review_Out_Sourced_3P__c</fullName>
        <label>Review Out Sourced 3P</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Roof_Attachement_and_Foot_Detail__c</fullName>
        <label>Roof Attachement and Foot Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Roof_Racking_EGC__c</fullName>
        <label>Roof Racking EGC</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rough_Inspection_Notes__c</fullName>
        <label>Rough Inspection Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rough_Racking_PreInstallation_Inspection__c</fullName>
        <label>Rough Racking PreInstallation Inspection</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>STAB_Lock_Panels_Allowed__c</fullName>
        <label>STAB Lock Panels Allowed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Seismic_Shut_Off_Value__c</fullName>
        <label>Seismic Shut Off Value</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Seismic_Zone__c</fullName>
        <label>Seismic Zone</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Setback__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Setback</label>
        <referenceTo>AHJ_SetBack__c</referenceTo>
        <relationshipLabel>AHJ Names</relationshipLabel>
        <relationshipName>AHJ_Names</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shading_ARC__c</fullName>
        <label>Shading ARC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_Conduit_Route_On_Roof__c</fullName>
        <label>Show Conduit Route On Roof</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Site_Plan_PLA_Card__c</fullName>
        <label>Site Plan PLA Card</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Snow_Loads__c</fullName>
        <label>Snow Loads</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Solar_Permit_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Solar Permit Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_Clearance_Requirements__c</fullName>
        <label>Special Clearance Requirements</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Special_Labeling_NH__c</fullName>
        <label>Special Labeling NH</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Special_Labeling__c</fullName>
        <label>Special Labeling</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Special_Notes_On_AC_Disconnect__c</fullName>
        <label>Special Notes On AC Disconnect</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Specific_Roof_Rafter_Spacing__c</fullName>
        <label>Specific Roof Rafter Spacing</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stamping_Notes_NH__c</fullName>
        <label>Stamping Notes NH</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Stamping_Notes_SPD__c</fullName>
        <label>Stamping Notes SPD</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Stamping_Party__c</fullName>
        <label>Stamping Party</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>3rd Party</fullName>
                </value>
                <value>
                    <fullName>In-House</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>State</label>
        <referenceTo>AHJ_State__c</referenceTo>
        <relationshipLabel>AHJ Names</relationshipLabel>
        <relationshipName>AHJ_Names</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Structural_Stamp_Required_NH__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Structural Stamp Required NH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Structural_Stamp_Required_SPD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Structural Stamp Required SPD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Turn_Around_Time__c</fullName>
        <label>Turn Around Time</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Utility_Over_Sizing_Notes__c</fullName>
        <label>Utility Over Sizing Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Utility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Utility</label>
        <referenceTo>AHJ_Utility__c</referenceTo>
        <relationshipLabel>AHJ Names</relationshipLabel>
        <relationshipName>AHJ_Names</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>AHJ Name</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Utility__c</columns>
        <columns>Setback__c</columns>
        <columns>State__c</columns>
        <columns>AHJ_Type__c</columns>
        <columns>AHJName_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>AHJ Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AHJ Names</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>